WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172709
[Win] fast/shadow-dom/fullscreen-in-slot-fullscreenElement.html is flaky.
https://bugs.webkit.org/show_bug.cgi?id=172709
Summary
[Win] fast/shadow-dom/fullscreen-in-slot-fullscreenElement.html is flaky.
Per Arne Vollan
Reported
2017-05-30 05:55:11 PDT
We should make sure we exit from fullscreen mode after a fullscreen test.
Attachments
Patch
(4.83 KB, patch)
2017-05-30 05:59 PDT
,
Per Arne Vollan
bfulgham
: review+
bfulgham
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2017-05-30 05:59:52 PDT
Created
attachment 311500
[details]
Patch
Brent Fulgham
Comment 2
2017-05-30 07:00:30 PDT
Comment on
attachment 311500
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=311500&action=review
R=me but please make a new IWebViewPrivate5 interface to avoid breaking existing COM interface users.
> Source/WebKit/win/Interfaces/IWebViewPrivate.idl:350 > + HRESULT exitFullscreenIfNeeded();
Sadly, we need to make an IWebViewPrivate5 here, because IWebViewPrivate4 already shipped to users, and we will break them if we modify the COM interface.
Per Arne Vollan
Comment 3
2017-05-30 08:03:21 PDT
(In reply to Brent Fulgham from
comment #2
)
> Comment on
attachment 311500
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=311500&action=review
> > R=me but please make a new IWebViewPrivate5 interface to avoid breaking > existing COM interface users. > > > Source/WebKit/win/Interfaces/IWebViewPrivate.idl:350 > > + HRESULT exitFullscreenIfNeeded(); > > Sadly, we need to make an IWebViewPrivate5 here, because IWebViewPrivate4 > already shipped to users, and we will break them if we modify the COM > interface.
Thanks for reviewing! I will make an IWebViewPrivate5 interface before landing.
Per Arne Vollan
Comment 4
2017-05-30 08:42:39 PDT
Committed <
https://trac.webkit.org/changeset/217557/webkit
>
Radar WebKit Bug Importer
Comment 5
2017-05-30 20:17:56 PDT
<
rdar://problem/32479628
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug