[Win] fast/shadow-dom/fullscreen-in-slot-fullscreenElement.html is flaky. https://bugs.webkit.org/show_bug.cgi?id=172709

Reviewed by Brent Fulgham.

Source/WebKit/win:

Add method to exit fullscreen mode.

* Interfaces/IWebViewPrivate.idl:
* WebView.cpp:
(WebView::exitFullscreenIfNeeded):
* WebView.h:

Tools:

Exit fullscreen mode after a fullscreen test.

* DumpRenderTree/win/DumpRenderTree.cpp:
(resetWebViewToConsistentStateBeforeTesting):

LayoutTests:

* platform/win/TestExpectations:


Canonical link: https://commits.webkit.org/189607@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217557 268f45cc-cd09-0410-ab3c-d52691b4dbfc