Source/WebKit/win/WebView.h
@@ -87,7 +87,7 @@ interface ID2D1RenderTarget;
 
 class WebView 
     : public IWebView
-    , public IWebViewPrivate4
+    , public IWebViewPrivate5
     , public IWebIBActions
     , public IWebViewCSS
     , public IWebViewEditing
@@ -401,6 +401,9 @@ public:
 
     // IWebViewPrivate4
     HRESULT STDMETHODCALLTYPE setVisibilityState(WebPageVisibilityState);
+
+    // IWebViewPrivate5
+    HRESULT STDMETHODCALLTYPE exitFullscreenIfNeeded();
 
     // WebView
     bool shouldUseEmbeddedView(const WTF::String& mimeType) const;
